v3.8.0 (XXXX-XX-XX)
-------------------

* Make the time-to-live (TTL) value of a streaming cursor only count after the
  response has been sent to the client.

* Added option `--query-max-runtime` to arangoexport, in order to control
  maximum query runtime.

* Fix BTS-340: AQL expressions similar to `x < 3 || x` are no longer erroneously
  be reduced to `x < 3` by the optimizer rule remove-redundant-or.

* Change arangosh client behavior:
  - *_RAW methods will never add a `body` to HEAD responses
  - *_RAW methods will now always return velocypack-typed responses in Buffers
  - `--server.force-json` will now be applied as default, overrideable
    by user code


v3.8.0-beta.1 (2021-04-20)
--------------------------

* Fix BTS-374: thread race between ArangoSearch link unloading and storage
  engine WAL flushing.

* Improve parallelism capabilities of arangorestore.

  arangorestore can now dispatch restoring data chunks of a collection to idle
  background threads, so that multiple restore requests can be in flight for the
  same collection concurrently.

  This can improve restore speed in situations when there are idle threads left
  (number of threads can be configured via arangorestore's `--threads` option)
  and the dump file for the collection is large.

  The improved parallelism is only used when restoring dumps that are in the
  non-enveloped format. This format has been introduced with ArangoDB 3.8.
  The reason is that dumps in the non-enveloped format only contain the raw
  documents, which can be restored independent of each other, i.e. in any order.
  However, the enveloped format may contain documents and remove operations,
  which need to be restored in the original order.

* Fix crashes during arangorestore operations due to usage of wrong pointer
  value for updating user permissions.

* Fixed BTS-360 and ES-826: sporadic ArangoSearch error `Invalid RL encoding in
  'dense_fixed_offset_column_key'`.
