@@ -1,6 +1,8 @@
 v3.8.0 (XXXX-XX-XX)
 -------------------
 
+* Fix a potential buffer overflow in RestReplicationHandler.
+
 * Make the time-to-live (TTL) value of a streaming cursor only count after the
   response has been sent to the client.
 
